--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Print Environment Name
-        run: echo "Environment Name: ${{ github.workflow }}"
+        run: echo ${{ github.workflow }}
